cmake_minimum_required(VERSION 3.8)
project(gnss_com_pkg)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(serial REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(sensor_driver_msgs REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()

add_executable(gnss_com_driver_node src/gnss_com_driver_node.cpp)
ament_target_dependencies(gnss_com_driver_node rclcpp std_msgs serial sensor_msgs sensor_driver_msgs)
install(TARGETS
  gnss_com_driver_node
  DESTINATION lib/${PROJECT_NAME}
)
  
install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME})